--- a/config.yml
+++ b/config.yml
@@ -1,13 +1,40 @@
 database:
-
+  # the name of your JDBC driver
   driverClass: org.postgresql.Driver
+
+  # the username
   user: postgres
+
+  # the password
   password: postgres
-  url: jdbc:postgresql://10.0.2.9:5432/dvdrental
-  #properties:
-  #              hibernate.dialect: org.hibernate.dialect.MySQLDialect
-  #              hibernate.generate_statistics: false
-  #              hibernate.show_sql: true
-  #              hibernate.hbm2ddl.auto: create
-template: Hello, %s!
-defaultName: Stranger
+
+  # the JDBC URL
+  url: jdbc:postgresql://10.0.2.9/dvdrental
+
+  # any properties specific to your JDBC driver:
+  properties:
+    charSet: UTF-8
+    hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  # the maximum amount of time to wait on an empty pool before throwing an exception
+  maxWaitForConnection: 1s
+
+  # the SQL query to run when validating a connection's liveness
+  validationQuery: "/* MyApplication Health Check */ SELECT 1"
+
+  # the minimum number of connections to keep open
+  minSize: 8
+
+  # the maximum number of connections to keep open
+  maxSize: 32
+
+  # whether or not idle connections should be validated
+  checkConnectionWhileIdle: false
+
+swagger:
+  resourcePackage: com.siseth.dw.helloworld
+  uriPrefix: /
+  title: API
+  version: 1
+  description: Dokumentacja WebService
+  contact: Set(h) | Systemy Informatyczne
