--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <dropwizard.version>1.0.6</dropwizard.version>
         <postgresql.version>9.4.1211</postgresql.version>
         <swagger.version>1.0.0-1</swagger.version>
+        <flyway.version>1.0.0-1</flyway.version>
     </properties>
 
     <dependencies>
@@ -58,7 +59,22 @@
             <version>${swagger.version}</version>
         </dependency>
 
-    </dependencies>
+        <dependency>
+            <groupId>io.dropwizard.modules</groupId>
+            <artifactId>dropwizard-flyway</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-metrics</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
