--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 app:
   migration: true
-  reinstall: true
+  reinstall: false
   repair: true
 
 database:
@@ -20,6 +20,7 @@ database:
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate.hbm2ddl.auto: create
 
   # the maximum amount of time to wait on an empty pool before throwing an exception
   maxWaitForConnection: 1s
